[gd_scene load_steps=4 format=3 uid="uid://c163e2lo8kwni"]

[ext_resource type="StyleBox" path="res://Prefabs/Styles/Panel/SettingPanel.tres" id="1"]
[ext_resource type="FontFile" path="res://Prefabs/Styles/Fonts/Size30.tres" id="2"]
[ext_resource type="Script" uid="uid://blewv78k2y52k" path="res://Prefabs/Elements/ReportPanel.gd" id="3"]

[node name="ReportPanel" type="Panel"]
offset_top = 1144.0
offset_right = 710.0
offset_bottom = 1264.0
custom_minimum_size = Vector2(0, 120)
mouse_filter = 1
theme_override_styles/panel = ExtResource("1")
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReportBug" type="Button" parent="HBoxContainer"]
offset_right = 338.0
offset_bottom = 120.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.498039, 0.768627, 0.992157, 1)
theme_override_fonts/font = ExtResource("2")
text = "Report bug"
flat = true

[node name="RequestFeature" type="Button" parent="HBoxContainer"]
offset_left = 342.0
offset_right = 680.0
offset_bottom = 120.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.498039, 0.768627, 0.992157, 1)
theme_override_fonts/font = ExtResource("2")
text = "Request feature"
flat = true

[node name="Debugger" type="Button" parent="HBoxContainer"]
offset_left = 684.0
offset_right = 710.0
offset_bottom = 120.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.498039, 0.768627, 0.992157, 1)
theme_override_fonts/font = ExtResource("2")
text = "  "
flat = true

[connection signal="pressed" from="HBoxContainer/ReportBug" to="." method="_on_ReportBug_pressed"]
[connection signal="pressed" from="HBoxContainer/RequestFeature" to="." method="_on_RequestFeature_pressed"]
[connection signal="pressed" from="HBoxContainer/Debugger" to="." method="_on_Debugger_pressed"]
